--- a/Detecting Bias in Language Model .ipynb
+++ b/Detecting Bias in Language Model .ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis: Intersentences:<br>\n",
+    "## Analysis -  Intersentences :<br>\n",
     "I ran BertForNextSentencePrediction on the dev set and here are some of interesting cases. First we will be looking at 2 cases where the model favors stereotype and followed a  case where the model favors non-stereotypes"
    ]
   },
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis:  IntraSentences"
+    "## Analysis -  IntraSentences:"
    ]
   },
   {
