--- a/Detecting Bias in Language Model .ipynb
+++ b/Detecting Bias in Language Model .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes when we cannot dissect a model, we to expose it to different stimuli to understand how the model behave. So, this time I am  trying to understand the kind of biases langauge models have. For this, I will be using \n",
+    "Sometimes when we cannot dissect a model, we to expose it to different stimuli to understand how the model behaves. So, this time I am  trying to understand the kind of biases langauge models have. For this, I will be using \n",
     "-  Stereoset is from MIT and is available here https://stereoset.mit.edu/. A full description of the test suite is in their paper https://arxiv.org/pdf/2004.09456.pdf\n",
     "- 'bert-base-uncased' with BertForNextSentencePrediction & BertForMaskedLM\n",
     "\n"
